# STAC_downloader

./: .gitignore  LICENSE  README.md  download_STAC_S2_imagery.py  download_STAC_imageryS1_S2.py  download_landsat_STAC.py  example_STAC_landsat_from_planetary_computer.ipynb  example_STAC_s1_from_planetary_computer.ipynb  pyproject.toml
