[project]
authors = [{name = "Sharon Fitzpatrick", email = "SF2309@Gmail.Com"}]
dependencies = []
name = "STAC_downloads"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
stac_downloads = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
stackstac = ">=0.5.1,<0.6"
pystac = ">=1.13.0,<2"
geopandas = ">=1.1.0,<2"
xarray = ">=2025.4.0,<2026"
rioxarray = ">=0.19.0,<0.20"
planetary-computer = ">=1.0.0,<2"
