[project]
authors = [{name = "Sharon Fitzpatrick", email = "SF2309@Gmail.Com"}]
dependencies = []
name = "STAC_downloads"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
stac_downloads = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
stackstac = ">=0.5.1,<0.6"
pystac = ">=1.13.0,<2"
geopandas = ">=1.1.0,<2"
xarray = ">=2025.4.0,<2026"
rioxarray = ">=0.19.0,<0.20"
planetary-computer = ">=1.0.0,<2"
ipython = ">=9.3.0,<10"
ipykernel = ">=6.29.5,<7"
scikit-image = ">=0.25.2,<0.26"
leafmap = ">=0.48.6,<0.49"
rio-cogeo = ">=5.4.2,<6"
tqdm = ">=4.67.1,<5"
